[project]
name = "autobean-format"
version = "0.1.8"
description = "Yet another formatter for beancount"
authors = [
    {name = "SEIAROTg", email = "seiarotg@gmail.com"},
]
dependencies = [
    "autobean-refactor>=0.2.3",
    "typing-extensions>=4.4.0",  # for 3.10 compatibility
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
autobean-format = "autobean_format.main:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
[tool.pdm.build]
includes = [
    "autobean_format/",
]
excludes = [
    "autobean_format/tests/",
]

[tool.pdm.dev-dependencies]
dev = [
    "mypy>=0.991",
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
]
